# Goals

./: .env.example  .eslintrc.json  .gitignore  ARCHITECTURE.md  CLAUDE_INDEX.md  DEPENDENCY_REPORT.md  FEATURE_MAP.md  INDEX.md  MAINTENANCE_LOG.md  PERFORMANCE_REPORT.md  PHASE_1_COMPLETE.md  README.md  SECURITY_REPORT.md  SETUP.md  TEST_REPORT.md  middleware.ts  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json
.claude/: launch.json  start-dev.sh
Daily_clean_Report/4_apr/: MAINTENANCE_LOG.md
app/: globals.css  layout.tsx  providers.tsx
app/(auth)/login/: page.tsx
app/(dashboard)/: layout.tsx
app/(dashboard)/cash/: page.tsx
components/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  Dropdown.tsx  FilterPicker.tsx  Input.tsx  Modal.tsx  UserPicker.tsx
components/Dashboard/: Header.tsx  Sidebar.tsx
components/ui/: DESIGN_SYSTEM.md  Skeleton.tsx  index.ts  sign-in.tsx
lib/: auth.ts  colors.ts  constants.ts  utils.ts
lib/api/: getTenantId.ts
lib/constants/: status.ts
lib/context/: FilterContext.tsx
lib/hooks/: useKPI.ts  usePerformance.ts  usePriority.ts  useTeams.ts  useUsers.ts  useWWW.ts
lib/schemas/: kpiSchema.ts  prioritySchema.ts  teamSchema.ts  wwwSchema.ts
lib/services/: kpiService.ts
lib/types/: kpi.ts  priority.ts  shared.ts  www.ts
lib/utils/: currency.ts  fiscal.ts  kpiHelpers.ts
prisma/: schema.prisma  seed-performance.ts  seed-weekly.ts  seed.ts
src/: __init__.py  cli.py  models.py  store.py
tests/: test_cli.py  test_models.py  test_store.py
types/: index.ts  next-auth.d.ts
(+85 files in other folders)
