[project]
name = "goals"
version = "0.1.0"
description = "Goal tracking and management application"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
goals = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
